# django-react-keycloak

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/drk/: asgi.py  authentication.py  settings.py  urls.py  views.py  wsgi.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  AuthenticationService.jsx  main.jsx
frontend/src/components/: Home.jsx  Navbar.jsx  Resources.jsx
